--- a/app/src/main/res/layout/fragment_auction.xml
+++ b/app/src/main/res/layout/fragment_auction.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="btinnolab.com.oction.AuctionFragment">
+    tools:context="btinnolab.com.oction.Fragments.AuctionFragment">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
@@ -14,9 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
 
 </FrameLayout>
