--- a/app/src/main/res/layout/fragment_auction_current.xml
+++ b/app/src/main/res/layout/fragment_auction_current.xml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,3 +34,4 @@
         android:layout_gravity="center"/>
 
 </FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
